syntax = "proto3";

package hello;  // ⚠️ Thêm dòng này!

option java_multiple_files = true;
option java_package = "application.proto";
option java_outer_classname = "HelloWorldProto";

service Simple {
  rpc SayHello(HelloRequest) returns (HelloReply) {}
  rpc StreamHello(HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}